# HaleHound-Android

./: CMakeLists.txt  README.md
app/src/main/kotlin/com/halehound/: BleAttacks.kt  HalBridge.kt  MainActivity.kt  UsbDeviceManager.kt  WifiAttacks.kt
app/src/main/res/xml/: device_filter.xml
docs/: BUILD.md  GPIO_MAPPING.md  HARDWARE_BOM.md
firmware-stubs/: PLACE_FIRMWARE_HERE.txt  bluetooth_attacks_android.cpp  wifi_attacks_android.cpp
hal/: Arduino.h  HardwareSerial.h  SPI.h  pgmspace.h  pins_arduino.h
jni/: HardwareSerial.cpp  SPI.cpp  attack_entry.cpp  usb_hal.cpp
